# service/components/requests/group_requests.go
@@ -2,51 +2,42 @@ package requests
 
 import (
 	"net/url"
-	"regexp"
 )
 
 type GroupCreateRequest struct {
 	GroupName string   `json:"groupName"`
+	PhotoURL  string   `json:"photo_url"`
 	Members   []string `json:"members"`
 }
 
 func (g *GroupCreateRequest) IsValid() bool {
-	match, _ := regexp.MatchString(`^.*?$`, g.GroupName)
-	return len(g.GroupName) >= 3 && len(g.GroupName) <= 50 && match && len(g.Members) >= 3 && len(g.Members) <= 100
+	if len(g.GroupName) < 3 || len(g.GroupName) > 50 {
+		return false
+	}
+	if _, err := url.ParseRequestURI(g.PhotoURL); err != nil {
+		return false
+	}
+	for _, member := range g.Members {
+		if len(member) == 0 {
+			return false
+		}
+	}
+	return true
 }
 
 type AddMemberRequest struct {
 	Username string `json:"username"`
+	GroupID  string `json:"group_id"`
 }
 
 func (a *AddMemberRequest) IsValid() bool {
-	match, _ := regexp.MatchString(`^.*?$`, a.Username)
-	return len(a.Username) > 0 && match
+	return len(a.Username) > 0 && len(a.GroupID) > 0
 }
 
-type RemoveMemberRequest struct {
-	Username string `json:"username"`
+type LeaveGroupRequest struct {
+	GroupID string `json:"group_id"`
 }
 
-func (r *RemoveMemberRequest) IsValid() bool {
-	match, _ := regexp.MatchString(`^.*?$`, r.Username)
-	return match
-}
-
-type GroupNameUpdateRequest struct {
-	GroupName string `json:"groupName"`
-}
-
-func (g *GroupNameUpdateRequest) IsValid() bool {
-	match, _ := regexp.MatchString(`^.*?$`, g.GroupName)
-	return len(g.GroupName) >= 3 && len(g.GroupName) <= 50 && match
-}
-
-type GroupPhotoUpdateRequest struct {
-	PhotoURL string `json:"photo_url"`
-}
-
-func (g *GroupPhotoUpdateRequest) IsValid() bool {
-	_, err := url.ParseRequestURI(g.PhotoURL)
-	return err == nil
+func (l *LeaveGroupRequest) IsValid() bool {
+	return len(l.GroupID) > 0
 }
