# service/components/schema/error_response.go
@@ -1,5 +1,12 @@
 package schema
 
-type ErrorResponse struct {
-	Error string `json:"error"`
-}
+import "errors"
+
+var (
+	ErrUserDoesNotExist            = errors.New("user does not exist")
+	ErrConversationDoesNotExist    = errors.New("conversation does not exist")
+	ErrMessageDoesNotExist         = errors.New("message does not exist")
+	ErrReactionDoesNotExist        = errors.New("reaction does not exist")
+	ErrGroupDoesNotExist           = errors.New("group does not exist")
+	ErrUnauthorizedToDeleteMessage = errors.New("unauthorized to delete message")
+)
