# service/components/schema/reaction.go
@@ -1,6 +1,0 @@
-package schema
-
-type Reaction struct {
-	Emoji    string `json:"emoji"`
-	Username string `json:"username"`
-}
